--- a/Nachalo.html
+++ b/Nachalo.html
@@ -1,18 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+    #p2{
+ background-position: center;
+ background-size: 20%/30%;
+    }
+       #p1 {
+background: mediumslateblue;
+color:navajowhite;
+font: 15px 	Comic Sans MS;
+
+        }
+        table {
+border-color: gold;            
+        }
+        </style>
 <meta charset="utf-8">
 <title>My first page in repository</title>
 </head>
 <body>
-<table>
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
+<table border="1" width="400">
+    <tr height="100">
+        <td colspan="3"></td>
         <td></td>
         <td></td>
         </tr>
+        <tr height="100">
+                <td></td>
+                <td rowspan="3"></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                </tr>
+                <tr height="100">
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        </tr>
+                        <tr height="100">
+                                <td></td>
+                                <td></td>
+                                <td id="p2" colspan="2" background="images.jpg"></td>
+                                </tr>
+                                <tr height="100">
+                                        <td id="p1" colspan="5" align="center">Sdes mogla but washa reclama</td>
+                                        </tr>
 </table>    
 </body>
 </html>
