--- a/Nachalo.html
+++ b/Nachalo.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <style>
+            #p3{
+background-size:10px/50px;
+background-position: center; 
+            }
     #p2{
  background-position: center;
  background-size: 20%/30%;
@@ -22,7 +26,7 @@ border-color: gold;
 <body>
 <table border="1" width="400">
     <tr height="100">
-        <td colspan="3"></td>
+        <td colspan="3" id="p3" background="images1.jpg"></td>
         <td></td>
         <td></td>
         </tr>
