--- a/Nachalo.html
+++ b/Nachalo.html
@@ -3,8 +3,8 @@
 <head>
     <style>
             #p3{
-background-size:10px/50px;
-background-position: center; 
+background-image:url(images1.jpg);
+background-size:cover; 
             }
     #p2{
  background-position: center;
@@ -26,7 +26,7 @@ border-color: gold;
 <body>
 <table border="1" width="400">
     <tr height="100">
-        <td colspan="3" id="p3" background="images1.jpg"></td>
+        <td colspan="3" id="p3"></td>
         <td></td>
         <td></td>
         </tr>
@@ -46,7 +46,7 @@ border-color: gold;
                         <tr height="100">
                                 <td></td>
                                 <td></td>
-                                <td id="p2" colspan="2" background="images.jpg"></td>
+                                <td colspan="2" id="p2" background="images.jpg"></td>
                                 </tr>
                                 <tr height="100">
                                         <td id="p1" colspan="5" align="center">Sdes mogla but washa reclama</td>
