--- a/Nachalo.html
+++ b/Nachalo.html
@@ -2,55 +2,18 @@
 <html>
 <head>
     <style>
-            #p3{
-background-image:url(images1.jpg);
-background-size:cover; 
-            }
-    #p2{
- background-position: center;
- background-size: 20%/30%;
-    }
-       #p1 {
-background: mediumslateblue;
-color:navajowhite;
-font: 15px 	Comic Sans MS;
-
-        }
-        table {
-border-color: gold;            
-        }
+#Head   { 
+background-color:mistyrose; 
+box-sizing: border-box;
+width: 100%;
+height: 100%; 
+}
         </style>
 <meta charset="utf-8">
 <title>My first page in repository</title>
 </head>
 <body>
-<table border="1" width="400">
-    <tr height="100">
-        <td colspan="3" id="p3"></td>
-        <td></td>
-        <td></td>
-        </tr>
-        <tr height="100">
-                <td></td>
-                <td rowspan="3"></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                </tr>
-                <tr height="100">
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        </tr>
-                        <tr height="100">
-                                <td></td>
-                                <td></td>
-                                <td colspan="2" id="p2" background="images.jpg"></td>
-                                </tr>
-                                <tr height="100">
-                                        <td id="p1" colspan="5" align="center">Sdes mogla but washa reclama</td>
-                                        </tr>
-</table>    
+    <div id="Head">Head</div>
+
 </body>
 </html>
