--- a/Nachalo.html
+++ b/Nachalo.html
@@ -2,18 +2,23 @@
 <html>
 <head>
     <style>
-#Head   { 
-background-color:mistyrose; 
-box-sizing: border-box;
-width: 100%;
-height: 100%; 
+#Head   {
+        position: absolute;
+        left:0; 
+        background-color:mistyrose;
+        width: 100%; 
+        top:0;
+        height: 15%;
+        font-size:30px;
+        text-align: center;
+        align-content: center;
 }
         </style>
 <meta charset="utf-8">
 <title>My first page in repository</title>
 </head>
 <body>
-    <div id="Head">Head</div>
+    <div id="Head">Historical corner</div>
 
 </body>
 </html>
