--- a/Nachalo.html
+++ b/Nachalo.html
@@ -2,23 +2,82 @@
 <html>
 <head>
     <style>
-#Head   {
+#Head {
         position: absolute;
         left:0; 
         background-color:mistyrose;
         width: 100%; 
-        top:0;
-        height: 15%;
-        font-size:30px;
+        top:0px;
+        height: 90px;
+        font-size: 40px;
         text-align: center;
-        align-content: center;
+        padding-top: 40px;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+}
+#Links {
+        position: absolute;
+        left: 0;
+        background-color:palevioletred;
+        width: 15%;
+        top: 130px;
+        height: 112%;
+        font-size: 20px;
+        z-index: 1;
+}
+#Cont {
+        position: absolute;
+        left:15%;
+        background-color:blanchedalmond;
+        width:85%;
+        height: 100%;
+        top:130px;
+        font-size: 15px; 
+}
+h1{
+        text-align: center;
+}
+img{
+        position: absolute;
+        left:20%;
+        border-radius: 20px;    
+}
+#Wtext {
+        position: absolute;
+        top: 75%;
+        left: 10%;
+        font-size: 20px;
+}
+#footer{
+        width: 100%;
+        position: absolute;
+        top: 120%;
+        left:0%;
+        background-color: lightsalmon;
+        height: 40px;
+        text-align: center;
+        padding-top: 40px;
+        z-index: 0;
 }
         </style>
 <meta charset="utf-8">
-<title>My first page in repository</title>
+<title>Historical corner</title>
 </head>
 <body>
     <div id="Head">Historical corner</div>
-
+    <div id="Links">
+<ul>
+<li>Main</li>
+<li>News</li>
+<li>Historical ages</li>
+<li>FQ</li>
+<li>Useful links</li>
+</ul>
+    </div>
+<div id="Cont">
+<h1>Welcome to our corner</h1>
+<img src="_106417433_gettyimages-92418117.jpg">
+<pre id="Wtext">It is the site where you can discover something about knowledge of the ages</pre>
+        </div>
+        <div id="footer">@all rights reserved</div>
 </body>
 </html>
