--- a/Nachalo.html
+++ b/Nachalo.html
@@ -1,83 +1,71 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <style>
-#Head {
-        position: absolute;
-        left:0; 
-        background-color:mistyrose;
-        width: 100%; 
-        top:0px;
-        height: 90px;
-        font-size: 40px;
-        text-align: center;
-        padding-top: 40px;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
-}
-#Links {
-        position: absolute;
-        left: 0;
-        background-color:palevioletred;
-        width: 15%;
-        top: 130px;
-        height: 112%;
-        font-size: 20px;
-        z-index: 1;
-}
-#Cont {
-        position: absolute;
-        left:15%;
-        background-color:blanchedalmond;
-        width:85%;
-        height: 100%;
-        top:130px;
-        font-size: 15px; 
-}
-h1{
-        text-align: center;
-}
-img{
-        position: absolute;
-        left:20%;
-        border-radius: 20px;    
-}
-#Wtext {
-        position: absolute;
-        top: 75%;
-        left: 10%;
-        font-size: 20px;
-}
-#footer{
-        width: 100%;
-        position: absolute;
-        top: 120%;
-        left:0%;
-        background-color: lightsalmon;
-        height: 40px;
-        text-align: center;
-        padding-top: 40px;
-        z-index: 0;
-}
-        </style>
-<meta charset="utf-8">
-<title>Historical corner</title>
+<title>Practica </title>
 </head>
 <body>
-    <div id="Head">Historical corner</div>
-    <div id="Links">
-<ul>
-<li>Main</li>
-<li>News</li>
-<li>Historical ages</li>
-<li>FQ</li>
-<li>Useful links</li>
-</ul>
-    </div>
-<div id="Cont">
-<h1>Welcome to our corner</h1>
-<img src="_106417433_gettyimages-92418117.jpg">
-<pre id="Wtext">It is the site where you can discover something about knowledge of the ages</pre>
-        </div>
-        <div id="footer">@all rights reserved</div>
+<table border="1" width="100%">
+      <tr height="30px">
+          <td rowspan="13" ></td>
+          <td> Home </td>
+          <td>Upgrades</td>
+          <td> Store </td>
+          <td> Music</td>
+          <td>News </td>
+          <td>Exit</td>
+          <td rowspan="13"></td>
+      </tr>  
+      <tr>
+          <td colspan="6"><hr noshade="" size="3px"></hr></td>
+      </tr>
+      <tr height="30px">
+          <td rowspan="8">
+              <table>
+              <tr>
+              <td><img src="profile_photo.jpg"><td>
+                          
+              </tr>
+              <tr>
+              <td><pre>            Murchik *BOSS*</pre></td>  
+                </tr>
+              </table>
+            </td>
+          <td colspan="5"><pre>«Когда-нибудь потом» – опаснейшая болезнь, которая рано или поздно похоронит ваши мечты.</pre><hr  noshade="" size="3px"></hr></td>                
+      </tr> 
+      <tr height="30px">
+
+        <td colspan="5">Лень — это мать. У нее сын — воровство и дочь — голод.
+                Гюго В.<hr  noshade="" size="3px"></hr></td>
+                        
+    </tr> 
+    <tr height="30px" >
+        <td colspan="5">Время — великий учитель. Беда в том, что оно убивает своих
+                учеников Будда<hr  noshade="" size="3px"></hr></td>              
+    </tr>
+    <tr height="30px">
+        <td colspan="5">Знания, не рожденные опытом, матерью всякой
+                достоверности, бесплодны и полны ошибок. Леонардо да
+                Винчи<hr  noshade="" size="3px"></hr></td>              
+    </tr>
+    <tr height="30px">
+        <td colspan="5">Кто много говорит, тот часто терпит неудачу. Лаоцзы<hr  noshade="" size="3px"></hr></td>              
+    </tr>
+    <tr height="30px">
+        <td colspan="5">Все люди о себе высокого мнения — и тем больше мнят, чем
+                меньше стоят. Грасиан-и-Моралес<hr  noshade="" size="3px"></hr></td>              
+    </tr>
+    <tr height="30px">
+        <td colspan="5">Деятельность — единственный путь к знанию. Шоу Б.<hr  noshade="" size="3px"></hr></td>              
+    </tr>
+    <tr height="30px">
+        <td colspan="5">Кто думает, что постиг все, тот ничего не знает. Лаоцзы<hr noshade="" size="3px"></hr></td>              
+    </tr>   
+    <tr height="30px">
+        <td colspan="6"></td>
+    </tr>
+    <tr>
+            <td colspan="6"><hr noshade="" size="3px"></hr></td>
+    </tr>
+</table>
 </body>
 </html>
