--- a/Nachalo.html
+++ b/Nachalo.html
@@ -4,16 +4,16 @@
 <title>Practica </title>
 </head>
 <body>
-<table border="1" width="100%">
+<table width="100%">
       <tr height="30px">
-          <td rowspan="13" ></td>
-          <td> Home </td>
-          <td>Upgrades</td>
-          <td> Store </td>
-          <td> Music</td>
-          <td>News </td>
-          <td>Exit</td>
-          <td rowspan="13"></td>
+          <td rowspan="13"  width="10%"></td>
+          <td align="center"> Home </td>
+          <td align="center">Upgrades</td>
+          <td align="center"> Store </td>
+          <td align="center"> Music</td>
+          <td align="center">News </td>
+          <td align="center">Exit</td>
+          <td rowspan="13" width="10%"></td>
       </tr>  
       <tr>
           <td colspan="6"><hr noshade="" size="3px"></hr></td>
@@ -30,35 +30,32 @@
                 </tr>
               </table>
             </td>
-          <td colspan="5"><pre>«Когда-нибудь потом» – опаснейшая болезнь, которая рано или поздно похоронит ваши мечты.</pre><hr  noshade="" size="3px"></hr></td>                
+          <td colspan="5"><pre> «Когда-нибудь потом» – опаснейшая болезнь, которая рано или поздно похоронит ваши мечты.</pre><hr  noshade="" size="1px"></hr></td>                
       </tr> 
       <tr height="30px">
 
-        <td colspan="5">Лень — это мать. У нее сын — воровство и дочь — голод.
-                Гюго В.<hr  noshade="" size="3px"></hr></td>
+        <td colspan="5"><pre> Лень — это мать. У нее сын — воровство и дочь — голод. <i>Гюго В.</i></pre><hr  noshade="" size="1px"></hr></td>
                         
     </tr> 
     <tr height="30px" >
-        <td colspan="5">Время — великий учитель. Беда в том, что оно убивает своих
-                учеников Будда<hr  noshade="" size="3px"></hr></td>              
+        <td colspan="5"><pre> Время — великий учитель. Беда в том, что оно убивает своих учеников <i>Будда</i></pre><hr  noshade="" size="1px"></hr></td>              
     </tr>
     <tr height="30px">
-        <td colspan="5">Знания, не рожденные опытом, матерью всякой
-                достоверности, бесплодны и полны ошибок. Леонардо да
-                Винчи<hr  noshade="" size="3px"></hr></td>              
+        <td colspan="5"><pre> Знания, не рожденные опытом, матерью всякой достоверности, бесплодны и полны ошибок. 
+                                                                            <i>Леонардо да Винчи<i></pre><hr  noshade="" size="1px"></hr></td>              
     </tr>
     <tr height="30px">
-        <td colspan="5">Кто много говорит, тот часто терпит неудачу. Лаоцзы<hr  noshade="" size="3px"></hr></td>              
+        <td colspan="5"><pre> Кто много говорит, тот часто терпит неудачу. <i>Лаоцзы</i></pre><hr  noshade="" size="1px"></hr></td>              
     </tr>
     <tr height="30px">
-        <td colspan="5">Все люди о себе высокого мнения — и тем больше мнят, чем
-                меньше стоят. Грасиан-и-Моралес<hr  noshade="" size="3px"></hr></td>              
+        <td colspan="5"><pre> Все люди о себе высокого мнения — и тем больше мнят, чем меньше стоят.
+                                                                 <i>Грасиан-и-Моралес</i></pre><hr  noshade="" size="1px"></hr></td>              
     </tr>
     <tr height="30px">
-        <td colspan="5">Деятельность — единственный путь к знанию. Шоу Б.<hr  noshade="" size="3px"></hr></td>              
+        <td colspan="5"><pre> Деятельность — единственный путь к знанию. <i>Шоу Б.</i></pre><hr  noshade="" size="1px"></hr></td>              
     </tr>
     <tr height="30px">
-        <td colspan="5">Кто думает, что постиг все, тот ничего не знает. Лаоцзы<hr noshade="" size="3px"></hr></td>              
+        <td colspan="5"><pre>Кто думает, что постиг все, тот ничего не знает. <i>Лаоцзы</i></pre><hr noshade="" size="1px"></hr></td>              
     </tr>   
     <tr height="30px">
         <td colspan="6"></td>
