--- a/Nachalo.html
+++ b/Nachalo.html
@@ -1,68 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Practica </title>
+      <link rel="stylesheet" type="text/CSS" href="file.css">
+      <title>Practica </title>
 </head>
 <body>
-<table width="100%">
-      <tr height="30px">
-          <td rowspan="13"  width="10%"></td>
-          <td align="center"> Home </td>
-          <td align="center">Upgrades</td>
-          <td align="center"> Store </td>
-          <td align="center"> Music</td>
-          <td align="center">News </td>
-          <td align="center">Exit</td>
-          <td rowspan="13" width="10%"></td>
-      </tr>  
-      <tr>
-          <td colspan="6"><hr noshade="" size="3px"></hr></td>
-      </tr>
-      <tr height="30px">
-          <td rowspan="8">
-              <table>
-              <tr>
-              <td><img src="profile_photo.jpg"><td>
-                          
-              </tr>
-              <tr>
-              <td><pre>            Murchik *BOSS*</pre></td>  
-                </tr>
-              </table>
-            </td>
-          <td colspan="5"><pre> «Когда-нибудь потом» – опаснейшая болезнь, которая рано или поздно похоронит ваши мечты.</pre><hr  noshade="" size="1px"></hr></td>                
-      </tr> 
-      <tr height="30px">
-
-        <td colspan="5"><pre> Лень — это мать. У нее сын — воровство и дочь — голод. <i>Гюго В.</i></pre><hr  noshade="" size="1px"></hr></td>
-                        
-    </tr> 
-    <tr height="30px" >
-        <td colspan="5"><pre> Время — великий учитель. Беда в том, что оно убивает своих учеников <i>Будда</i></pre><hr  noshade="" size="1px"></hr></td>              
-    </tr>
-    <tr height="30px">
-        <td colspan="5"><pre> Знания, не рожденные опытом, матерью всякой достоверности, бесплодны и полны ошибок. 
-                                                                            <i>Леонардо да Винчи<i></pre><hr  noshade="" size="1px"></hr></td>              
-    </tr>
-    <tr height="30px">
-        <td colspan="5"><pre> Кто много говорит, тот часто терпит неудачу. <i>Лаоцзы</i></pre><hr  noshade="" size="1px"></hr></td>              
-    </tr>
-    <tr height="30px">
-        <td colspan="5"><pre> Все люди о себе высокого мнения — и тем больше мнят, чем меньше стоят.
-                                                                 <i>Грасиан-и-Моралес</i></pre><hr  noshade="" size="1px"></hr></td>              
-    </tr>
-    <tr height="30px">
-        <td colspan="5"><pre> Деятельность — единственный путь к знанию. <i>Шоу Б.</i></pre><hr  noshade="" size="1px"></hr></td>              
-    </tr>
-    <tr height="30px">
-        <td colspan="5"><pre>Кто думает, что постиг все, тот ничего не знает. <i>Лаоцзы</i></pre><hr noshade="" size="1px"></hr></td>              
-    </tr>   
-    <tr height="30px">
-        <td colspan="6"></td>
-    </tr>
-    <tr>
-            <td colspan="6"><hr noshade="" size="3px"></hr></td>
-    </tr>
-</table>
+     <div id="lside"></div>
+     <div id="rside"></div>
+     <div id="top1" class="tops text"><b>Home</b></div>
+     <div id="top2" class="tops text">Updates</div>
+     <div id="top3" class="tops text">Store</div>
+     <div id="top4" class="tops text">Music</div>
+     <div id="top5" class="tops text">News</div>
+     <div id="top6" class="tops text">Exit</div>
+     <div id="topline" class="line"><hr noshade="" size="3px"></hr></div>
+     <div id="picp"><img src="profile_photo.jpg"></div>
 </body>
 </html>
