--- a/Nachalo.html
+++ b/Nachalo.html
@@ -15,5 +15,6 @@
      <div id="top6" class="tops text">Exit</div>
      <div id="topline" class="line"><hr noshade="" size="3px"></hr></div>
      <div id="picp"><img src="profile_photo.jpg"></div>
+     <div id="pictext" class="text"></div>
 </body>
 </html>
