--- a/Nachalo.html
+++ b/Nachalo.html
@@ -15,6 +15,16 @@
      <div id="top6" class="tops text">Exit</div>
      <div id="topline" class="line"><hr noshade="" size="3px"></hr></div>
      <div id="picp"><img src="profile_photo.jpg"></div>
-     <div id="pictext" class="text"></div>
-</body>
+     <div id="pictext" class="text">Murchik <b>*BOSS*</b></div>
+     <div id="ptext1" class="text prowtext">«Когда-нибудь потом» – опаснейшая болезнь, которая рано или поздно похоронит ваши мечты.<hr noshad="" size="1px"></hr></div>
+     <div id="ptext2" class="text prowtext">Лень — это мать. У нее сын — воровство и дочь — голод.<i> Гюго В</i><hr noshad="" size="1px"></hr></div>
+     <div id="ptext3" class="text prowtext">Время — великий учитель. Беда в том, что оно убивает своих учеников<i> Будда</i><hr noshad="" size="1px"></hr></div>
+     <div id="ptext4" class="text prowtext">Знания, не рожденные опытом, матерью всякой достоверности, бесплодны и полны ошибок.<i> Леонардо да Винчи</i><hr noshad="" size="1px"></hr></div>
+     <div id="ptext5" class="text prowtext">Кто много говорит, тот часто терпит неудачу.<i> Лаоцзы</i><hr noshad="" size="1px"></hr></div>
+     <div id="ptext6" class="text prowtext">Все люди о себе высокого мнения — и тем больше мнят, чем меньше стоят.<i> Грасиан-и-Моралес</i><hr noshad="" size="1px"></hr></div>
+     <div id="ptext7" class="text prowtext">Деятельность — единственный путь к знанию.<i> Шоу Б.</i><hr noshad="" size="1px"></hr></div>
+     <div id="ptext8" class="text prowtext">Кто думает, что постиг все, тот ничего не знает.<i> Лаоцзы</i><hr noshad="" size="1px"></hr></div>
+     <div id="footline" class="line"><hr noshade="" size="3px"></hr></div> 
+     <div id="foottext" class="text"><b>Lutsk, 2019</b></div>  
+    </body>
 </html>
