--- a/Nachalo.html
+++ b/Nachalo.html
@@ -1,30 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-      <link rel="stylesheet" type="text/CSS" href="file.css">
-      <title>Practica </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link type="text/css" rel="stylesheet" href="file.css" />
 </head>
-<body>
-     <div id="lside"></div>
-     <div id="rside"></div>
-     <div id="top1" class="tops text"><b>Home</b></div>
-     <div id="top2" class="tops text">Updates</div>
-     <div id="top3" class="tops text">Store</div>
-     <div id="top4" class="tops text">Music</div>
-     <div id="top5" class="tops text">News</div>
-     <div id="top6" class="tops text">Exit</div>
-     <div id="topline" class="line"><hr noshade="" size="3px"></hr></div>
-     <div id="picp"><img src="profile_photo.jpg"></div>
-     <div id="pictext" class="text">Murchik <b>*BOSS*</b></div>
-     <div id="ptext1" class="text prowtext">«Когда-нибудь потом» – опаснейшая болезнь, которая рано или поздно похоронит ваши мечты.<hr noshad="" size="1px"></hr></div>
-     <div id="ptext2" class="text prowtext">Лень — это мать. У нее сын — воровство и дочь — голод.<i> Гюго В</i><hr noshad="" size="1px"></hr></div>
-     <div id="ptext3" class="text prowtext">Время — великий учитель. Беда в том, что оно убивает своих учеников<i> Будда</i><hr noshad="" size="1px"></hr></div>
-     <div id="ptext4" class="text prowtext">Знания, не рожденные опытом, матерью всякой достоверности, бесплодны и полны ошибок.<i> Леонардо да Винчи</i><hr noshad="" size="1px"></hr></div>
-     <div id="ptext5" class="text prowtext">Кто много говорит, тот часто терпит неудачу.<i> Лаоцзы</i><hr noshad="" size="1px"></hr></div>
-     <div id="ptext6" class="text prowtext">Все люди о себе высокого мнения — и тем больше мнят, чем меньше стоят.<i> Грасиан-и-Моралес</i><hr noshad="" size="1px"></hr></div>
-     <div id="ptext7" class="text prowtext">Деятельность — единственный путь к знанию.<i> Шоу Б.</i><hr noshad="" size="1px"></hr></div>
-     <div id="ptext8" class="text prowtext">Кто думает, что постиг все, тот ничего не знает.<i> Лаоцзы</i><hr noshad="" size="1px"></hr></div>
-     <div id="footline" class="line"><hr noshade="" size="3px"></hr></div> 
-     <div id="foottext" class="text"><b>Lutsk, 2019</b></div>  
-    </body>
+<body>    
+
+    <div>
+        <button class="btn sz-big">Regular button (big)</button>
+        <button class="btn btn-primary sz-big">Primary button (big)</button>
+        <button class="btn btn-warn sz-big">Warning button (big)</button>
+        <button class="btn btn-error sz-big">Error button (big)</button>
+        <button class="btn btn-success sz-big">Success button (big)</button>
+        <button class="btn btn-info sz-big">Info button (big)</button>
+    </div>
+    <br>
+    <div>
+        <button class="btn">Regular button</button>
+        <button class="btn btn-primary">Primary button</button>
+        <button class="btn btn-warn">Warning button</button>
+        <button class="btn btn-error">Error button</button>
+        <button class="btn btn-success">Success button</button>
+        <button class="btn btn-info">Info button</button>
+    </div>
+    <br>
+    <div>
+        <button class="btn sz-small">Regular button (small)</button>
+        <button class="btn btn-primary sz-small">Primary button (small)</button>
+        <button class="btn btn-warn sz-small">Warning button (small)</button>
+        <button class="btn btn-error sz-small">Error button (small)</button>
+        <button class="btn btn-success sz-small">Success button (small)</button>
+        <button class="btn btn-info sz-small">Info button (small)</button>
+    </div>
+
+    <br>
+
+    <input type="text" class="input sz-big" value="Regular input (big)"> 
+    <input type="text" class="input input-success sz-big" value="Success input (big)"> 
+    <input type="text" class="input input-error sz-big" value="Error input (big)"> 
+    <br><br>
+    <input type="text" class="input" value="Regular input">
+    <input type="text" class="input input-success" value="Success input"> 
+    <input type="text" class="input input-error" value="Error input"> 
+    <br><br>
+    <input type="text" class="input sz-small" value="Regular input (small)">
+    <input type="text" class="input input-success sz-small" value="Success input (small)">
+    <input type="text" class="input input-error sz-small" value="Error input (small)">
+
+</body>
 </html>
